--- a/MovieShop.Web/Views/Home/Index.cshtml
+++ b/MovieShop.Web/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
+﻿@model IEnumerable<MovieShop.Core.Models.MovieResponseModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<div class="container-fluid bg-light">
+    <div class="row">
+       @foreach (var movie in Model)
+        {
+               
+            <div class="col-6 col-lg-3 col-sm-4 col-xl-2">
+              @*  @await Html.PartialAsync("_MovieCard", movie); *@
+                <partial name="_MovieCard" model="movie" />
+            </div>           
+
+       }
+     </div>
+ </div>
