12/08_c_add_details_and_model

--- a/MovieShop.Web/Views/Movies/Details.cshtml
+++ b/MovieShop.Web/Views/Movies/Details.cshtml
@@ -1,10 +1,197 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using System.Globalization
+@using MovieShop.Core.ServiceInterfaces
+@model MovieShop.Core.Models.MovieDetailsResponseModel
+@inject ICurrentUserService UserService
+<div class="bg-image" style="background-image: url(@Model.BackdropUrl)">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>I'm Details of movie view!</p>
+    <div class="row">
+        <div class="col-md-3 offset-2">
+
+            <!-- Movie Card row -->
+            <div>
+                <img src="@Model.PosterUrl" class="card-img-top" />
+            </div>
+
+        </div>
+        <div class="col-md-4">
+            <div class="row mt-2">
+                <div class="col-12">
+                    <h1 class="text-white">
+                        @Model.Title
+                    </h1>
+                    <small class="text-muted"> @Model.Tagline </small>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-4 text-secondary font-weight-bold mt-2">
+                    @Model.RunTime m | @Model.ReleaseDate.Value.Date.Year
+                </div>
+                <div class="col-8">
+
+                    @foreach (var genre in Model.Genres)
+                    {
+                        <a class="badge badge-pill badge-dark ml-1" asp-action="Genre" asp-route-id="@genre.Id">
+                            @genre.Name
+                        </a>
+                    }
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 mt-3">
+                    <h4>
+                        <span class="badge badge-warning">
+                            @Model.Rating
+                        </span>
+                    </h4>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 text-light mt-2">
+                    @Model.Overview
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-2 mt-4 offset-1">
+            <ul class="list-group">
+                <li class="list-group-item">
+
+
+                </li>
+                <li class="list-group-item">
+                    <button type="button"
+                            class="btn btn-outline-light btn-lg btn-block btn-sm">
+                        <i class="far fa-edit mr-1"></i>
+                        REVIEW
+                    </button>
+                </li>
+                <li class="list-group-item">
+                    <button type="button"
+                            class="btn btn-outline-light btn-lg btn-block btn-sm">
+                        <i class="fas fa-play mr-1"></i> TRAILER
+                    </button>
+                </li>
+
+                <li class="list-group-item">
+                    <button type="button" class="btn btn-light btn-lg btn-block btn-sm" data-toggle="modal" data-target="#buyMovieModal">
+                        BUY @Model.Price
+                    </button>
+
+                    <button type="button" class="btn btn-light btn-lg btn-block btn-sm">
+                        WATCH MOVIE
+                    </button>
+                </li>
+            </ul>
+        </div>
+
+    </div>
 </div>
+
+
+<div class="row mt-4">
+    <div class="col-4 moviefacts">
+        <h5>MOVIE FACTS</h5>
+        <hr>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <i class="far fa-calendar-alt mr-2"></i>Release Date
+                <span class="badge badge-pill badge-dark">@Model.ReleaseDate.Value.ToShortDateString()</span>
+            </li>
+
+            <li class="list-group-item">
+                <i class="fas fa-hourglass-half mr-2"></i>Run Time
+                <span class="badge badge-pill badge-dark">@Model.RunTime.Value m</span>
+            </li>
+            <li class="list-group-item">
+                <i class="far fa-money-bill-alt"></i> Box Office
+                <span class="badge badge-pill badge-pill badge-dark">
+                    @NumberFormatInfo.CurrentInfo.CurrencySymbol
+                    @Model.Revenue?.ToString("C0")
+                </span>
+            </li>
+
+            <li class="list-group-item">
+                <i class="fas fa-dollar-sign mr-2"></i> Budget
+                <span class="badge badge-pill badge-dark">
+                    @NumberFormatInfo.CurrentInfo.CurrencySymbol
+                    @Model.Budget?.ToString("C0")
+                </span>
+            </li>
+
+            <li class="list-group-item">
+                <i class="fab fa-imdb"></i>
+
+                <a href="@Model.ImdbUrl"
+                   class="text-dark ml-3"
+                   target="_blank">
+                    <i class="fas fa-share-square mr-2"></i>
+                </a>
+            </li>
+
+        </ul>
+    </div>
+
+    <div class="col-4 offset-1">
+        <h5>CAST</h5>
+
+        <table class="table">
+
+            <tbody>
+
+
+                @foreach (var cast in Model?.Casts)
+                {
+                    <tr>
+                        <td>
+                            <img src="@cast.ProfilePath"
+                                 class="cast-small-img rounded-circle"
+                                 alt="@cast.Name" />
+                        </td>
+                        <td> @cast.Name </td>
+                        <td> @cast.Character</td>
+                    </tr>
+                }
+
+
+            </tbody>
+        </table>
+
+    </div>
+</div>
+
+
+<!-- Modal -->
+<form method="post" asp-controller="User" asp-action="CreatePurchase">
+    <div class="modal fade" id="buyMovieModal" tabindex="-1" role="dialog" aria-labelledby="buyMovieModal" aria-hidden="true">
+
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p>Are you sure you wanna buy</p>
+
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h5 class="modal-title" id="exampleModalLabel">@Model.Title which is $@Model.Price </h5>
+                </div>
+                <input type="hidden" value="@Model.Id" name="MovieId" />
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <input type="hidden" value="@UserService.UserId" name="UserId" />
+                }
+
+                <div class="modal-footer">
+                    <input type="submit" value="YES" class="btn btn-primary" />
+                    <input type="button" class="btn btn-outline-dark" data-dismiss="modal" value="NO" />
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
