--- a/MovieShop.Web/Views/Shared/_Layout.cshtml
+++ b/MovieShop.Web/Views/Shared/_Layout.cshtml
@@ -24,13 +24,19 @@
                                 Genres
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    @await Component.InvokeAsync("Genres")
+                                @await Component.InvokeAsync("Genres")
                             </div>
 
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Log In</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
