12/09_add_rating_ignore_in_ET

--- a/MovieShop.Web/Views/Movies/Details.cshtml
+++ b/MovieShop.Web/Views/Movies/Details.cshtml
@@ -43,7 +43,7 @@
                 <div class="col-4 mt-3">
                     <h4>
                         <span class="badge badge-warning">
-                            @Model.Rating
+                            <!-- Model.Rating-->
                         </span>
                     </h4>
                 </div>
